--- a/style.css
+++ b/style.css
@@ -7,3 +7,10 @@
 body {
   background-color: rgba(255, 152, 0, 0.6);
 }
+
+p {
+  color: green;
+  font-size: 18px;
+  font-family: times now roman;
+  font-waight: 600;
+}
